<resources>
    <string name="app_name">TrackMonster Editor</string>
    <string name="camera_permission_granted">Permission granted</string>
    <string name="camera_permission_denied">Permission denied</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="track_list">Track list</string>
    <string name="sample_rate">Sampling interval (Seconds)</string>
    <string name="_id">ID</string>
    <string name="name">Name</string>
    <string name="number_of_points">Waypoints</string>
    <string name="date">Date</string>
    <string name="title_activity_tracklist">Tracks</string>
    <string name="status">Status:</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="new_track">New track</string>
    <string name="track_description">Track description</string>
    <string name="track_name">Track name</string>
    <string name="the_name_of_the_track">The name of the track</string>
    <string name="show_on_map">Show on map</string>
    <string name="a_description_of_the_track">A description of the track</string>
    <string name="track_details">Track details</string>
    <string name="active_track">Active track</string>
    <string name="unnamed_track">Unnamed track</string>
    <string name="track">Track</string>
    <string name="road">Road</string>
    <string name="major_road">Major road</string>
    <string name="undefined">Undefined</string>
    <string name="fab_start_recording">Start recording track</string>
    <string name="fab_stop_recording">Stop recording track</string>
    <string name="fab_pause_recording">Pause track recording</string>
    <string name="fab_cut_and_new">Cut and start new track</string>
    <string name="save">Save</string>
    <string name="add_waypoint">Add waypoint</string>
    <string name="email">email</string>
    <string name="saved_tracks">Saved tracks</string>
    <string name="import_track">Import track</string>
    <string name="import_track_Details">Import track details</string>
</resources>