<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.TrackDialogActivity">

    <fragment
        android:id="@+id/trackMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0" />

    <LinearLayout
        android:id="@+id/track_visible_checkboc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_margin="16dp"
        android:alpha=".70"
        android:background="@color/white"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:orientation="vertical"
        tools:context=".activities.TrackDialogActivity">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/track_name_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".7"
                android:background="@color/white"
                android:hint="@string/the_name_of_the_track"
                android:inputType="textCapWords"
                android:text="@string/unnamed_track"
                android:textColor="@color/purple_500"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/track_detail_text_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha=".7"
                android:background="@color/white"
                android:hint="@string/a_description_of_the_track"
                android:inputType="textCapSentences"
                android:singleLine="false"
                android:textColor="@color/purple_500"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"
        android:layout_margin="16dp"
        android:alpha=".70"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="4dp"
        android:paddingEnd="4dp">

        <RadioGroup
            android:id="@+id/trackStyleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/undefinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undefined" />

            <RadioButton
                android:id="@+id/trackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/track" />

            <RadioButton
                android:id="@+id/roadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:checked="true"
                android:text="@string/road" />

            <RadioButton
                android:id="@+id/majorRoadButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:text="@string/major_road" />
        </RadioGroup>

    <CheckBox
        android:id="@+id/track_active_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/active_track" />

    <CheckBox
        android:id="@+id/track_visibility_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/show_on_map" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>